# road_lists

./: .env.example  .gitignore  Cargo.toml  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  test.typ
src/: main.rs
static/: index.html  login.html
static/js/: app.js
templates/: template.typ
