[package]
name = "road_lists"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio", "tls-native-tls"] }
tracing = "0.1"
tracing-subscriber = "0.3"
