[package]
name = "road_lists"
version = "0.2.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs", "trace", "cors"] }
tower = { version = "0.4", features = ["timeout"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio", "tls-native-tls"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# OAuth + HTTP
oauth2 = "4.4"
reqwest = { version = "0.12", features = ["json"] }

# Session + Cookies
axum-extra = { version = "0.9", features = ["cookie", "typed-header"] }
time = "0.3"

# Utils
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
dotenvy = "0.15"

chrono = { version = "0.4", features = ["serde"] }

[profile.release]
lto = true
